# open-claude-router

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  router  router.sh
docs/: ARCHITECTURE.md
src/: __init__.py  cli.py  config.py  main.py  models.py  statsig_response.json  stream.py  transform.py
tests/: __init__.py  test_api.py  test_transform.py
